First three new BRE rules implemented for todo item 7.8.6 (New Business Rules) and ui/db adjustments implemented for 3 remaining rules. 3 remaining rules still to be implemented.
	modified:   Configuration/DBScript/Phase7Sprint8.txt
	modified:   idas.chox.core/src/main/java/idas/chox/core/model/BreBand.java
	modified:   idas.chox.core/src/main/java/idas/chox/core/model/VehicleClass.java
	modified:   idas.chox.core/src/main/java/idas/chox/core/util/DateHelper.java
	modified:   idas.chox.data/src/main/resources/hbm/BreBand.hbm.xml
	modified:   idas.chox.data/src/test/resources/import.sql
	new file:   idas.chox.service/src/main/java/idas/chox/service/bre/rules/MaximumLabourRatePrestige.java
	new file:   idas.chox.service/src/main/java/idas/chox/service/bre/rules/MaximumLabourRateStandard.java
	modified:   idas.chox.service/src/main/java/idas/chox/service/bre/rules/VehicleClassHireProvisionLikeForLike6To8.java
	new file:   idas.chox.service/src/main/java/idas/chox/service/bre/rules/VehicleClassHireProvisionLikeForLike6To8SP.java
	modified:   idas.chox.service/src/main/java/idas/chox/service/bre/rules/VehicleClassHireProvisionLikeForLike8To9.java
	new file:   idas.chox.service/src/main/java/idas/chox/service/bre/rules/VehicleClassHireProvisionLikeForLike8To9SP.java
	modified:   idas.chox.service/src/main/java/idas/chox/service/bre/rules/VehicleClassHireProvisionLikeForLikeOver9.java
	new file:   idas.chox.service/src/main/java/idas/chox/service/bre/rules/VehicleClassHireProvisionLikeForLikeOver9SP.java
	modified:   idas.chox.service/src/test/java/idas/chox/bre/Rule045VehicleClassHireProvisionLikeForLike6To8Test.java
	modified:   idas.chox.service/src/test/java/idas/chox/bre/Rule046VehicleClassHireProvisionLikeForLikeOver9Test.java
	modified:   idas.chox.service/src/test/java/idas/chox/bre/Rule049VehicleClassHireProvisionLikeForLike8To9Test.java
	new file:   idas.chox.service/src/test/java/idas/chox/bre/Rule084VehicleClassHireProvisionLikeForLike6To8SPTest.java
	new file: