@@ -19,10 +19,10 @@ import idas.chox.service.bre.util.VehicleClassHelper;
  *
  * @author John
  */
-public class VehicleClassHireProvisionLikeForLike6To8 implements IBusinessRule {
+public class VehicleClassHireProvisionLikeForLike8To9SP implements IBusinessRule {
 
-    private static final Logger LOG = LoggerFactory.getLogger(VehicleClassHireProvisionLikeForLike6To8.class);
-    private String narrative = "The CHO's customer's vehicle is [x] years old and vehicle class [y], the replacement vehicle class of [z] is not acceptable as the replacement vehicle class should be one class less than the CHO's customer's vehicle based on the age of the vehicle and the agreement in place.";
+    private static final Logger LOG = LoggerFactory.getLogger(VehicleClassHireProvisionLikeForLike8To9SP.class);
+    private String narrative = "The CHO's customer's vehicle is [x] years old and vehicle class [y], the replacement vehicle class of [z] is not acceptable as the replacement vehicle class should be two classes less than the CHO's customer's vehicle based on the age of the vehicle and the agreement in place.";
 
     @Override
     public RuleEvaluation applyToClaim(Claim claim) {
@@ -30,10 +30,9 @@ public class VehicleClassHireProvisionLikeForLike6To8 implements IBusinessRule {
         res.setIsVisibleToCHO(false);
         res.setRelatedRule(this);
         res.setClaimType(claim.getClaimType());
-        LOG.debug("Applying rule 'VehicleClassHireProvisionLikeForLike6To8' to claim {}.", claim.getChoReference());
+        LOG.debug("Applying rule 'VehicleClassHireProvisionLikeForLike8To9' to claim {}.", claim.getChoReference());
 
-        if (claim.getBreBand().isVehicleClassHireProvisionLikeForLike6To8()) {
-
+        if (claim.getBreBand().isVehicleClassHireProvisionLikeForLike8To9SP()) {
             if (claim.getCustomer() != null && VehicleClassHelper.isVehicleClassValid(claim.getCustomer().getVehicleClass())) {
                 Date firstRegistration = claim.getCustomer().getHpiFirstRegistration();
                 if (firstRegistration == null) {
@@ -46,24 +45,24 @@ public class VehicleClassHireProvisionLikeForLike6To8 implements IBusinessRule {
                         Date hireStart = claim.getVehicleHire().getHireStart();
                         double difference = DateHelper.differenceInYears(hireStart, firstRegistration);
                         LOG.debug("Difference in years between {} and {} is " + Double.toString(difference), hireStart, firstRegistration);
-                        if (difference < 6.0 || difference > 8.0) {
+                        if (difference < 8.0 || difference > 9.0) {
                             LOG.debug("Rule skipped: Registration period was {} years ago", difference);
-                            narrative = "Customer vehicle registration is " + (new Double(difference)).intValue() + " years before hire start.";
+                            narrative = "Customer vehicle registration is " + Integer.valueOf((int)difference).toString() + " years before hire start.";
                             res.setResult(RuleEvaluationResult.RULE_SKIPPED);
                         } else {
                             VehicleClass customerVehicleClass = claim.getCustomer().getVehicleClass();
                             VehicleClass hireVehicleClass = claim.getVehicleHire().getVehicleClass();
                             try {
-                                int classDifference = VehicleClass.classPDifference(customerVehicleClass, hireVehicleClass);
-                                if (classDifference <= -1) {
+                                int classDifference = VehicleClass.classSPDifference(customerVehicleClass, hireVehicleClass);
+                                if (classDifference <= -2) {
                                     res.setResult(RuleEvaluationResult.RULE_PASSED);
-                                    LOG.debug("Rule passed: Vehicle class allocated for hire ok for customer vehicle between 6 and 8 years old.");
+                                    LOG.debug("Rule passed: Vehicle class allocated for hire ok for customer vehicle between 8 and 9 years old.");
                                     narrative = "";
                                 } else {
                                     res.setResult(RuleEvaluationResult.RULE_FAILED);
                                     narrative = "The CHO's customer's vehicle is " + (int)difference + " years old and vehicle class "
                                             + customerVehicleClass.getName() + ", the replacement vehicle class of "
-                                            + hireVehicleClass.getName() + " is not acceptable as the replacement vehicle class should be one class less than the CHO's customer's vehicle based on the age of the vehicle and the agreement in place.";
+                                            + hireVehicleClass.getName() + " is not acceptable as the replacement vehicle class should be two classes less than the CHO's customer's vehicle based on the age of the vehicle and the agreement in place.";
                                     LOG.debug("Rule failed: {}", narrative);
                                 }
                             } catch (Exception ex) {
@@ -89,6 +88,7 @@ public class VehicleClassHireProvisionLikeForLike6To8 implements IBusinessRule {
             res.setResult(RuleEvaluationResult.RULE_SKIPPED);
         }
 
+
         return res;
     }
 
@@ -99,7 +99,7 @@ public class VehicleClassHireProvisionLikeForLike6To8 implements IBusinessRule {
 
     @Override
     public String getRuleId() {
-        return "045";
+        return "085";
     }
 
     @Override
